<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/title_divider"
    android:padding="10dp"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Header Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ib_change_card"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@null"
                    android:src="@drawable/back"
                    android:scaleType="centerInside"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Card Details"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <!-- Card Details Section -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                app:cardCornerRadius="7dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:orientation="vertical"
                    android:background="@color/colorPrimaryDark"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/card_brand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="VISA"
                        android:textColor="@color/White"
                        android:gravity="end"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/card_bank_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="ACCESS BANK"
                        android:textColor="@color/White"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/card_type"
                                android:textColor="@color/White"
                                android:textSize="9sp"
                                android:textStyle="normal"
                                android:gravity="start"/>

                            <TextView
                                android:id="@+id/card_type"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Debit"
                                android:textColor="@color/White"
                                android:gravity="start"
                                android:textSize="14sp"
                                android:textStyle="normal"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/country"
                                android:textColor="@color/White"
                                android:gravity="end"
                                android:textSize="9sp"
                                android:textStyle="normal"/>

                            <TextView
                                android:id="@+id/tv_card_exp_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Nigeria"
                                android:textColor="@color/White"
                                android:gravity="end"
                                android:textSize="14sp"
                                android:textStyle="normal"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Your Card Details Section -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_card_details"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="23sp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/divider"
                android:layout_marginTop="10dp"/>

            <!-- Card Details Labels Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_brand"
                        android:textColor="@color/title_color"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        android:gravity="start"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_type"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/title_color"
                        android:gravity="start"
                        android:textSize="15sp"
                        android:textStyle="normal"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/bank"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/title_color"
                        android:gravity="start"
                        android:textSize="15sp"
                        android:textStyle="normal"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/country"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/title_color"
                        android:gravity="start"
                        android:textSize="15sp"
                        android:textStyle="normal"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_tip_amt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="VISA"
                        android:textColor="@color/title_color"
                        android:gravity="end"
                        android:textSize="15sp"
                        android:textStyle="normal"/>

                    <TextView
                        android:id="@+id/tv_card_brand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="DEBIT"
                        android:textColor="@color/title_color"
                        android:gravity="end"
                        android:textSize="15sp"
                        android:textStyle="normal"/>

                    <TextView
                        android:id="@+id/tv_card_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Access bank"
                        android:textColor="@color/title_color"
                        android:gravity="end"
                        android:textSize="15sp"
                        android:textStyle="normal"/>

                    <TextView
                        android:id="@+id/tv_subtotal_amt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="Nigeria"
                        android:textColor="@color/title_color"
                        android:gravity="end"
                        android:textSize="15sp"
                        android:textStyle="normal"/>



                </LinearLayout>



            </LinearLayout>

            <View
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="0.01"
                android:background="@color/divider"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>